[FIX] Align Items in featured-techs HTML element
- to right (was default(to left))

--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ body {
   display: inline-block;
   border-top: 1px solid hsla(180, 8%, 52%, 0.5);
   padding: 1.6rem 0;
+  text-align: right;
 }
 .featured-tech {
   display: inline-block;
